# COSMIC

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  README.md  changelog.md  environment.yml  genindex.html  index.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: general_issue.md  unexpected-stellar-evolutionary-behavior.md
.github/workflows/: build_wheels_and_publish.yml  deploy-github-pages.yml  github_registory.yml  publish-to-pypi.yml  python-package.yml  test_cibuild.yml
.travis/: build-lal.sh  compile_benchmark.sh  run-tests.sh
_downloads/0577541cb595783e54eb0e4f12517e99/: cosmic-sample-cmc-king-2.py
_downloads/28df02138d3c4ff463278474666fdfaa/: cosmic-sample-cmc-king-1.py
_downloads/63f78e4574d9551d67ba346d8c152572/: index-1.py
_downloads/c5b48928fcb29c05a9fdcce3433c01e7/: index-2.py
_downloads/d0a5c7e43be0a7cd27848392ee620ecf/: index-3.py
_downloads/d78ae4b83f4f8801634c8b6b7bee3113/: cosmic-sample-cmc-king-3.py
_downloads/ea25099b8bbaae0b7661233a83d3d528/: index-1.py
_downloads/f06e24372d9e5a45bed18ba3d9527d04/: index-2.py
_sources/: index.rst.txt
_sources/api/: cosmic.Match.rst.txt  cosmic.bse_utils.rst.txt  cosmic.bse_utils.zcnsts.rst.txt  cosmic.bse_utils.zdata.rst.txt  cosmic.checkstate.rst.txt  cosmic.evolve.rst.txt  cosmic.filter.rst.txt  cosmic.get_commit_hash.rst.txt  cosmic.plotting.rst.txt  cosmic.rst.txt  cosmic.sample.cmc.elson.rst.txt  cosmic.sample.cmc.king.rst.txt  cosmic.sample.cmc.rst.txt  cosmic.sample.initialbinarytable.rst.txt  cosmic.sample.initialcmctable.rst.txt  cosmic.sample.rst.txt  cosmic.sample.sampler.cmc.rst.txt  cosmic.sample.sampler.independent.rst.txt  cosmic.sample.sampler.multidim.rst.txt  cosmic.sample.sampler.rst.txt  cosmic.sample.sampler.sampler.rst.txt  cosmic.utils.rst.txt
_sources/examples/: index.rst.txt
_sources/fixedpop/: index.rst.txt
_sources/inifile/: index.rst.txt
_sources/output_info/: index.rst.txt
_sources/runpop/: index.rst.txt
_static/: documentation_options.js
aCOSMIC/: .sample.py.swp  .sampleBinariesThinDisk.py.swp  GW_calcs.py  KDE_samp.py  MC_samp.py  Match.py  MatchKnuth.py  __init__.py  _version.py  evolve.py  gxreal.py  lisa_sensitivity.py  multiDimSample.py  process.py  sample.py  sampleBinariesBulge.py  sampleBinariesThickDisk.py  sampleBinariesThinDisk.py  utils.py
aCOSMIC/sample/: initialbinarytable.py
aCOSMIC/src/: BSEparams.in  GxParams.in  Process.in  comenv.f  const_bse.h  evolv1.f  evolv2.f  hrdiag.f  kick.f  mlwind.f  star.f  tausworth.h  zfuncs.f
aCOSMIC/tests/: .test_sample.py.swp  test_evolve.py  test_lisa_sensitivity.py  test_match.py  test_sample.py  test_utils.py
api/: cosmic-sample-cmc-king-1.py  cosmic.Match.html  cosmic.bse_utils.html  cosmic.bse_utils.zcnsts.html  cosmic.bse_utils.zdata.html  cosmic.checkstate.html  cosmic.evolve.html  cosmic.filter.html  cosmic.get_commit_hash.html  cosmic.html  cosmic.plotting.html  cosmic.sample.cmc.elson.html  cosmic.sample.cmc.html  cosmic.sample.cmc.king.html  cosmic.sample.html  cosmic.sample.initialbinarytable.html  cosmic.sample.initialcmctable.html  cosmic.sample.sampler.cmc.html  cosmic.sample.sampler.html  cosmic.sample.sampler.independent.html  cosmic.sample.sampler.multidim.html  cosmic.sample.sampler.sampler.html  cosmic.utils.html
ci/: compile_benchmark.sh
cosmic/: .evolve.py.swp  FIRE.py  GW_calcs.py  MC_samp.py  Match.py  __init__.py  _version.py  checkstate.py  constants.py  evolve.py  filter.py  gxreal.py  lisa_sensitivity.py  plotting.py  test_single_system.py  utils.py
cosmic/bse_utils/: __init__.py  edit.sh  zcnsts.py  zdata.py
cosmic/log/: log.py
cosmic/mp/: __init__.py  mp.py  progress.py
cosmic/sample/: __init__.py  initialbinarytable.py  initialcmctable.py
cosmic/src/: .evolv2.f.swp  Makefile  assign_remnant.f  benchmarkevolv2.f  bpp_array.f  bse.f  checkstate.f  checkstate.h  comenv.f  comprad.f  compute_radii.f  concatkstars.f  const_bse.h  corerd.f  dgcore.f  dict.h  evolv1.f  evolv2.f  gntage.f  hrdiag.f  kick.f  (+16 more)
debug/: create_binary_in.py
docs/: Makefile  conf.py  cosmic-settings.json  create_params_ini.py  create_settings_html.py  fort.99  index.html  index.rst
examples/: CMC_Params.ini  Params.ini  index-1.py  index-2.py  index-3.py  index.html
fixedpop/: index.html
inifile/: index.html
install/: index.html
output_info/: index.html
params/: Params.in  sensitivityCurve.in
runpop/: index-1.py  index.html
src/cosmic/: Match.py  __init__.py  _version.py  evolve.py  filter.py  get_commit_hash.py  meson.build  plotting.py  utils.py
src/cosmic/METISSE/: evolve_metisse.in
src/cosmic/METISSE/defaults/: evolve_metisse_defaults.in
src/cosmic/METISSE/src/: track_def.inc  track_support.f90  z_support.f90  zcnsts_METISSE.f90
src/cosmic/bse_utils/: __init__.py  meson.build  zcnsts.py
src/cosmic/sample/: __init__.py  initialbinarytable.py  initialcmctable.py  meson.build
src/cosmic/sample/cmc/: elson.py  king.py  meson.build
src/cosmic/sample/sampler/: cmc.py  independent.py  meson.build  sampler.py
src/cosmic/src/: assign_commons_COSMIC.f90  benchmarkevolv2.f  bpp_array.f  bse.f  checkstate.h  comenv.f  comprad.f  concatkstars.f  const_bse.h  deltat.f  dgcore.f  evolv2.f  evolv_wrapper.f  evolvbin-f2pywrappers.f  evolvbinmodule.c  gntage.f  hrdiag.f  hrdiag_remnant.f  instar.f  int64.f  int64.h  kick.f  kick_but_better.f  kick_old.f  mix.f  mlwind.f  mrenv.f  ran3.f  star.f  taus113tester.f  test_bse.f  zcnsts.f  zfuncs.f
src/cosmic/src/SSE/: SSE_deltat.f  SSE_gntage.f  SSE_hrdiag.f  SSE_mlwind.f  SSE_star.f  SSE_zcnsts.f  SSE_zfuncs.f  const_bse.h  zcnsts_SSE.f
src/cosmic/src/extra/: bse.f
src/cosmic/tests/: __init__.py  meson.build  test_evolve.py  test_match.py  test_sample.py  test_utils.py
src/cosmic/tests/data/: Params.ini  cmc_elson_test.npz  cmc_plummer_test.npz  dat_ThinDisk_11_11_3.h5  initial_conditions_for_testing.hdf5  input_cmc.fits  kick_initial_conditions.h5
(+91 files in other folders)
