[project]
name = "cosmic-popsynth"
distname = "cosmic"
description = "a Python-interfaced binary population synthesis suite"
authors = [
    { name="Katelyn Breivik", email="katie.breivik@gmail.com" },
    { name="Scott Coughlin" },
    { name="Michael Zevin" },
    { name="Carl L. Rodriguez" },
    { name="Tom Wagg" },
]
readme = "README.md"


requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = ["numpy", "scipy", "astropy", "configparser", 
                "tqdm", "pandas", "tables", "h5py", "schwimmbad", 
                "matplotlib", "importlib-metadata"]


[project.optional-dependencies]
test = ["pytest", "pytest-xdist", "pytest-cov", "flake8", "coverage"]
docs = ["sphinx", "numpydoc", "sphinx-bootstrap-theme", 
        "sphinxcontrib-programoutput", "sphinx-automodapi",
        "ipython", "sphinx_rtd_theme", "pickleshare"]



[build-system]
requires = ["meson", "meson-python", "wheel", "numpy", "setuptools"]
build-backend = 'mesonpy'


# pyproject.toml
[tool.setuptools]
write_to = "src/cosmic/_version.py"
