[project]
name = "cosmic-popsynth"
distname = "cosmic"
description = "a Python-interfaced binary population synthesis suite"
authors = [
    { name="Katelyn Breivik", email="katie.breivik@gmail.com" },
    { name="Scott Coughlin" },
    { name="Michael Zevin" },
    { name="Carl L. Rodriguez" },
    { name="Tom Wagg" },
]
readme = "README.md"
version = "3.4.17"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = ["numpy", "scipy", "astropy", "configparser",
                "tqdm", "pandas", "tables", "h5py", "schwimmbad",
                "matplotlib", "importlib-metadata"]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

