python_sources = [
  '__init__.py',
  '_commit_hash.py',
  '_version.py',
  'checkstate.py',
  'evolve.py',
  'filter.py',
  'get_commit_hash.py',
  'Match.py',
  'plotting.py',
  'utils.py'
]

py3.install_sources(
  python_sources,
  subdir: 'cosmic'
)

subdir('bse_utils')
subdir('sample')
subdir('tests')
